<?xml version="1.0" encoding="utf-8"?>
<!-- Hangs off the app mark at the head of the toolbar; there is no gear. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menuMainActions">
        <item
            android:id="@+id/menuSettings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/menuCheckUpdates"
            android:title="@string/menu_check_updates" />
        <item
            android:id="@+id/menuSignOut"
            android:title="@string/menu_sign_out" />
    </group>
    <!-- A separate group makes AppCompat draw the requested separator; About
         deliberately remains the final item. -->
    <group android:id="@+id/menuAboutGroup">
        <item
            android:id="@+id/menuAbout"
            android:title="@string/menu_about" />
    </group>
</menu>
